# pax-LampD1

./: .gitattributes  .gitignore  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: builder-41.yml  builder-r41.yml  builder-rv4_1.yml  builder-rv4_2.yml  builder-v4_1.yml  builder.yml  install-builder-41.yml
SW/: CMakeLists.txt  action-build.sh  partitions.csv  sdkconfig.defaults
SW/components/BoardDev34/: .editorconfig  BoardDev34.cpp  BoardDev34.h  CMakeLists.txt  HTTPC2Server.cpp  HTTPC2Server.h  indexc.html
SW/components/BoardLampD1/: BoardLampD1.cpp  BoardLampD1.h  CMakeLists.txt  HTTPSrvLampD1.cpp  HTTPSrvLampD1.h
SW/components/BoardManager/: Board.cpp  Board.h  CMakeLists.txt  Configuration.cpp  Configuration.h  HTTPConfigServer.cpp  HTTPConfigServer.h  WiFiConfig.cpp  WiFiConfig.h  WiFiManager.h  indexo.html  pax_http_server.cpp  pax_http_server.h
SW/html/: build.sh  gulpfile.js  package-lock.json  package.json  webpack.config.js
SW/html/src/: app.js  config_page.js  configuration.js  firmware_page.js  home_page.js  index.html  logger.js  main.css  main.js  status_info.js
SW/main/: CMakeLists.txt  main.cpp
SW/web/: .editorconfig  index.html
SW/www/: gulpfile.js  package-lock.json  package.json
SW/www/src/: index.html  main.css  main.js
